<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_container">

    <ImageView
        android:id="@+id/smar_imageview_moduleimage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_023_tools"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/smar_textview_modulename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Handles"
        android:textSize="16sp"
        android:layout_toEndOf="@+id/smar_imageview_moduleimage"
        android:layout_marginTop="24dp"
        android:textColor="@color/blue"/>
    <TextView
        android:id="@+id/smar_textview_targetdatetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Target Date"
        android:fontFamily="@font/nunitoregular"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/smar_textview_modulename"
        android:layout_alignStart="@+id/smar_textview_modulename"/>
    <TextView
        android:id="@+id/smar_textview_targetdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oct 15 2019"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:layout_toEndOf="@+id/smar_textview_targetdatetext"
        android:layout_alignTop="@+id/smar_textview_targetdatetext"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/smar_textview_updatestatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskstatus_textview_updatestatus"
        android:fontFamily="@font/nunitoregular"
        android:textColor="@color/onyx"
        android:textSize="16sp"
        android:layout_below="@+id/smar_imageview_moduleimage"
        android:layout_alignStart="@+id/smar_imageview_moduleimage"/>

    <LinearLayout
        android:id="@+id/smar_layout_statusitemsholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smar_textview_updatestatus"
        android:layout_marginTop="12dp"
        >
        <RelativeLayout
            android:id="@+id/smar_layout_notstarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5">
            <ImageView
                android:id="@+id/smar_imageview_notstarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_panorama_fish_eye_black_24dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/smar_textview_notstarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskstatus_textview_notstarted"
                android:textSize="12sp"
                android:layout_below="@+id/smar_imageview_notstarted"
                android:layout_centerHorizontal="true"
                android:maxLines="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/smar_layout_inprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5">
            <ImageView
                android:id="@+id/smar_imageview_inprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ellipse_45"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/smar_textview_inprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskstatus_textview_inprogress"
                android:textSize="12sp"
                android:layout_below="@+id/smar_imageview_inprogress"
                android:layout_centerHorizontal="true"
                android:maxLines="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/smar_layout_delayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5">
            <ImageView
                android:id="@+id/smar_imageview_delayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ellipse_77"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/smar_textview_delayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskstatus_textview_delayed"
                android:textSize="12sp"
                android:layout_below="@+id/smar_imageview_delayed"
                android:layout_centerHorizontal="true"
                android:maxLines="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/smar_layout_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5">
            <ImageView
                android:id="@+id/smar_imageview_completed"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_checked"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/smar_textview_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskstatus_textview_completed"
                android:textSize="12sp"
                android:layout_below="@+id/smar_imageview_completed"
                android:layout_centerHorizontal="true"
                android:maxLines="2"/>
        </RelativeLayout>



    </LinearLayout>

    <View
        android:id="@+id/smar_view_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_below="@+id/smar_layout_statusitemsholder"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/smar_textview_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smar_view_line"
        android:layout_alignStart="@+id/smar_imageview_moduleimage"
        android:textColor="@color/blue"
        android:layout_marginTop="16dp"
        android:text="Photos    "
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:id="@+id/smar_layout_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/smar_view_linetwo"
        android:layout_below="@+id/smar_view_line"/>
    <RelativeLayout
        android:id="@+id/smar_layout_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/smar_view_linethree"
        android:layout_below="@+id/smar_view_linetwo"/>

    <View
        android:id="@+id/smar_view_linetwo"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_below="@+id/smar_textview_photos"
        />
    <TextView
        android:id="@+id/smar_textview_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comments    "
        android:textColor="@color/blue"
        android:layout_below="@+id/smar_view_linetwo"
        android:layout_alignStart="@+id/smar_imageview_moduleimage"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <View
        android:id="@+id/smar_view_linethree"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_below="@+id/smar_textview_comments"
        />
    <TextView
        android:id="@+id/smar_textview_numofphotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:textColor="@color/gray"
        android:layout_toEndOf="@+id/smar_textview_photos"
        android:layout_alignTop="@+id/smar_textview_photos"/>
    <TextView
        android:id="@+id/smar_textview_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskstatus_textview_added"
        android:textColor="@color/gray"
        android:layout_toEndOf="@+id/smar_textview_numofphotos"
        android:layout_alignTop="@+id/smar_textview_photos"
        android:layout_marginStart="4dp"/>
    <TextView
        android:id="@+id/smar_textview_numofcomments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:textColor="@color/gray"
        android:layout_toEndOf="@+id/smar_textview_comments"
        android:layout_alignTop="@+id/smar_textview_comments"/>
    <TextView
        android:id="@+id/smar_textview_unread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taskstatus_textview_comments"
        android:textColor="@color/gray"
        android:layout_toEndOf="@+id/smar_textview_numofcomments"
        android:layout_alignTop="@+id/smar_textview_numofcomments"
        android:layout_marginStart="4dp"/>

    <Button
        android:id="@+id/smar_button_statusupdatedone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/round_button"
        android:text="@string/taskstatus_button_save"
        android:textAllCaps="false"
        android:textColor="@color/white"/>



</RelativeLayout>